; ModuleID = '/home/carl/AnghaBench/freebsd/libexec/rtld-elf/extr_rtld_lock.c_def_wlock_acquire.c'
source_filename = "/home/carl/AnghaBench/freebsd/libexec/rtld-elf/extr_rtld_lock.c_def_wlock_acquire.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }

@SIG_BLOCK = common dso_local global i32 0, align 4
@fullsigmask = common dso_local global i32 0, align 4
@WAFLAG = common dso_local global i32 0, align 4
@SIG_SETMASK = common dso_local global i32 0, align 4
@wnested = common dso_local global i32 0, align 4
@oldsigmask = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @def_wlock_acquire to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @def_wlock_acquire(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.TYPE_2__*, align 8
  %4 = alloca i32, align 4
  store i8* %0, i8** %2, align 8
  %5 = load i8*, i8** %2, align 8
  %6 = bitcast i8* %5 to %struct.TYPE_2__*
  store %struct.TYPE_2__* %6, %struct.TYPE_2__** %3, align 8
  br label %7

7:                                                ; preds = %16, %1
  %8 = load i32, i32* @SIG_BLOCK, align 4
  %9 = call i32 @sigprocmask(i32 %8, i32* @fullsigmask, i32* %4)
  %10 = load %struct.TYPE_2__*, %struct.TYPE_2__** %3, align 8
  %11 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %10, i32 0, i32 0
  %12 = load i32, i32* @WAFLAG, align 4
  %13 = call i64 @atomic_cmpset_acq_int(i32* %11, i32 0, i32 %12)
  %14 = icmp ne i64 %13, 0
  br i1 %14, label %15, label %16

15:                                               ; preds = %7
  br label %19

16:                                               ; preds = %7
  %17 = load i32, i32* @SIG_SETMASK, align 4
  %18 = call i32 @sigprocmask(i32 %17, i32* %4, i32* null)
  br label %7

19:                                               ; preds = %15
  %20 = call i64 @atomic_fetchadd_int(i32* @wnested, i32 1)
  %21 = icmp eq i64 %20, 0
  br i1 %21, label %22, label %24

22:                                               ; preds = %19
  %23 = load i32, i32* %4, align 4
  store i32 %23, i32* @oldsigmask, align 4
  br label %24

24:                                               ; preds = %22, %19
  ret void
}

declare dso_local i32 @sigprocmask(i32, i32*, i32*) #1

declare dso_local i64 @atomic_cmpset_acq_int(i32*, i32, i32) #1

declare dso_local i64 @atomic_fetchadd_int(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
